<resources>
    <string name="app_name">7minutesApplication</string>
    <string name="start">START</string>
    <string name="start_image">start image</string>
    <string name="get_ready_for">Get Ready For</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="image">image</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="height_in_cm">Height (in CM)</string>
    <string name="weight_in_kg">WEIGHT (in KG)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="_15_0">15.0</string>
    <string name="normal">Normal</string>
    <string name="calculate">Calculate</string>
    <string name="you_have_balanced_bmi">You have balanced BMI</string>
</resources>